# otus-hw1

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists2.txt
.github/workflows/: cmake_runner.yml
src/: CMakeLists.txt  cmake_config.h.in  main.cpp  version.cpp
test/: test.cpp  test_version.cpp
tests/: CMakeLists.txt
